# rwkvasr_longform_asr

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  Spec.md  pyproject.toml
assets/hotwords/: benchmark_en_hardwords.txt  benchmark_en_zh_hardwords.txt  benchmark_zh_hardwords.txt
configs/: emilia_en_zh_bi_baseline_4x4090_deepspeed.yaml  emilia_en_zh_bi_baseline_qwen3_4x4090_deepspeed.yaml  emilia_en_zh_bi_baseline_spm8k_4x4090_deepspeed.yaml  emilia_en_zh_bi_baseline_whisper_4x4090_deepspeed.yaml  emilia_en_zh_dirdrop_both_4x4090_deepspeed.yaml  emilia_en_zh_dirdrop_both_spm8k_4x4090_deepspeed.yaml  emilia_en_zh_dirdrop_both_spm8k_stage2_from_best_4x4090_deepspeed.yaml  emilia_en_zh_joint_rwkv7g1_ctc_ar_4x4090_deepspeed.yaml  emilia_zh_bi_baseline_4x4090_deepspeed.yaml  emilia_zh_dirdrop_both_4x4090_deepspeed.yaml  model_config.example.yaml  paper_bi_baseline_4x4090_deepspeed.yaml  paper_bi_baseline_spm4k_4x4090_deepspeed.yaml  paper_bi_baseline_spm8k_4x4090_deepspeed.yaml  paper_dirdrop_both_4x4090_deepspeed.yaml  train_ctc.example.yaml  train_ctc_deepspeed.example.yaml
scripts/: prepare_emilia_en.sh  prepare_emilia_en_zh_mix.sh  prepare_emilia_zh.sh  resume_paper_bi_baseline_from_best.sh  train_emilia_en_zh_dirdrop_spm8k_from_best.sh  train_paper_rwkv_asr.py  train_paper_rwkv_asr.sh  watch_joint_training_sidecar.sh
src/rwkvasr/: config.py
tests/: test_batch_budget.py  test_data_and_entrypoints.py  test_deepspeed.py  test_eval.py  test_predict.py  test_rwkv7_time_mixer.py  test_rwkv_conformer.py  test_rwkv_encoder_ctc.py  test_safetensors_export.py  test_tokenizers.py  test_training.py  test_training_progress.py  test_webdataset.py  test_wenet_frontend.py
tools/: Cargo.toml  README.md
tools/src/: lib.rs  main.rs  predict_ctc.rs
tools/tmp_migrated/: eval_aishell_hf_parquet.py  eval_manifest_normalized.py  public_eval_whisper_bi.py  public_eval_whisper_bi_prune64.py  public_eval_whisper_bi_v2.py  (+2 more)
(+61 files in other folders)
